feat: generate mapper xml and service impl artifacts